# ByteWeasel

./: CMakeLists.txt  Makefile  README.md  compile.bat
cmake/exe/: CMakeLists.txt
cmake/shared/: CMakeLists.txt
cmake/static/: CMakeLists.txt
headers/: byteweasel.h  zagmate.h  zagmate_builtin.h
src/: byteweasel.c  main.c  zagmate.c  zagmate_builtin.c
util/: compile.bat  compile.sh  dlib.bat  dlib.sh  slib.bat  slib.sh
